cmake_minimum_required(VERSION 3.16)
project(mlp_examples)

add_subdirectory(f90)
add_subdirectory(f03)
add_subdirectory(misc/lto)
add_subdirectory(misc/lto_warnings)
add_subdirectory(misc/generated_headers)
add_subdirectory(misc/funptr_interop)
add_subdirectory(misc/derived_type_interfaces)
add_subdirectory(misc/test)